--- a/WPFdb/App.config
+++ b/WPFdb/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WPFdb.Properties.Settings.OnlineShopConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=OnlineShop;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
