--- a/WPFdb/WPFdb.csproj
+++ b/WPFdb/WPFdb.csproj
@@ -77,6 +77,7 @@
     <Compile Include="SerivceAdmin.cs" />
     <Compile Include="ServiceCustomer.cs" />
     <Compile Include="ServiceDiscount.cs" />
+    <Compile Include="ServiceOrders.cs" />
     <Compile Include="ServiceProducts.cs" />
     <Compile Include="ServiceSupplier.cs" />
     <Compile Include="SupplierWindow.xaml.cs">
